// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 1`] = `
<div>
  <div
    class="sc-jeraig dxzVkG"
  >
    <div
      class="sc-dFtzxp fjFdHi"
    >
      Completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 2`] = `
<div>
  <div
    class="sc-jeraig dxzVkG"
  >
    <div
      class="sc-TBWPX gftSmv"
    >
      <div
        class="sc-ZOtfp deksje"
      >
        Max column width:
        <input
          class="sc-jOxtWs eprMZF"
          max="3"
          min="3"
          type="range"
          value="70"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView displays bodyMessage if no rows 1`] = `
<div>
  <div
    class="sc-hiCibw icznka"
  >
    <div
      class="sc-lcepkR kjtMmT"
    >
      (no changes, no records)
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView does not display bodyMessage if rows 1`] = `
<div>
  <div
    class="sc-hiCibw icznka"
  >
    <pre
      class="sc-nVkyK eSroYp"
    >
      ╒═══╕
│x  │
╞═══╡
│"y"│
└───┘
    </pre>
  </div>
</div>
`;
